--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#spring.datasource.url=${DATABASE_URL}
-#spring.datasource.username=${USERNAME}
-#spring.datasource.password=${PASSWORD}
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=false
-#spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/tourism
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/tourism
+#spring.datasource.username=postgres
+#spring.datasource.password=123
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
