--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=${{DATABASE_URL}}
+spring.datasource.username=${{PGUSER}}
+spring.datasource.password=${{PGPASSWORD}}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
