--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${{DATABASE_URL}}
-spring.datasource.username=${{PGUSER}}
-spring.datasource.password=${{PGPASSWORD}}
+spring.datasource.url=postgresql://postgres:0NKiZQwneQJD7ofIfofk@containers-us-west-46.railway.app:7790/railway
+spring.datasource.username=postgres
+spring.datasource.password=0NKiZQwneQJD7ofIfofk
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
