db url update => for (Railway)

--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://postgres:0NKiZQwneQJD7ofIfofk@containers-us-west-46.railway.app:7790/railway
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
