--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:0NKiZQwneQJD7ofIfofk@containers-us-west-46.railway.app:7790/railway
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
@@ -6,10 +6,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/tourism
+#spring.datasource.url=jdbc:postgresql://containers-us-west-46.railway.app:7790/railway
 #spring.datasource.username=postgres
-#spring.datasource.password=123
+#spring.datasource.password=akKiwHPnVkqsKp8ScDVf
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=false
 #spring.jpa.properties.hibernate.format_sql=true
