hibernate changed => for (Railway)

--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+#spring.datasource.username=${PGUSER}
+#spring.datasource.password=${PGPASSWORD}
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
 
-#spring.datasource.url=jdbc:postgresql://containers-us-west-46.railway.app:7790/railway
-#spring.datasource.username=postgres
-#spring.datasource.password=akKiwHPnVkqsKp8ScDVf
+spring.datasource.url=jdbc:postgresql://containers-us-west-46.railway.app:7790/railway
+spring.datasource.username=postgres
+spring.datasource.password=akKiwHPnVkqsKp8ScDVf
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=false
