commandline runner => for (Railway)

--- a/tourism/src/main/resources/application.properties
+++ b/tourism/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 spring.datasource.url=jdbc:postgresql://containers-us-west-46.railway.app:7790/railway
 spring.datasource.username=postgres
 spring.datasource.password=akKiwHPnVkqsKp8ScDVf
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=false
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
